# trellis.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: api.ts  config.ts  main.ts  settings.ts  store.ts  tauri.ts  types.ts  ui.css  viewer.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: config.rs  main.rs  server.rs
assets/showcase/: README.md
docs/: getting-started.md
docs/spec/: 00-synthesis.md  01-pipeline.md  02-image_feature.md  03-samplers.md  04-ss_flow.md  05-transformer_attn.md  06-ss_vae.md  07-slat_flow.md  08-sparse_core.md  09-sparse_conv.md  10-shape_dec.md  11-tex_dec.md  12-ovoxel_mesh.md  20-dinov3.md  21-sparse_core.md  22-sparse_conv.md  23-slat_flow.md  24-shape_dec.md  25-mesh_glb.md  26-mvp-synthesis.md  27-reference-postprocess.md  28-divergence-matrix.md  29-perf-profile.md  IMPL_NOTES_dinov3.md  IMPL_NOTES_dit.md  IMPL_NOTES_ssdec.md
docs/spec/keys/: birefnet__model.keys.txt  ckpts__shape_dec_next_dc_f16c32_fp16.keys.txt  ckpts__shape_enc_next_dc_f16c32_fp16.keys.txt  ckpts__slat_flow_img2shape_dit_1_3B_512_bf16.keys.txt  ckpts__slat_flow_imgshape2tex_dit_1_3B_512_bf16.keys.txt  ckpts__ss_flow_img_dit_1_3B_64_bf16.keys.txt  ckpts__tex_dec_next_dc_f16c32_fp16.keys.txt  dinov3__model.keys.txt  tilarge__ckpts__ss_dec_conv3d_16l8_fp16.keys.txt
include/: birefnet.h  deform_conv.h  dinov3.h  dit.h  dual_grid.h  flow_runner.h  mesh_glb.h  npy.h  preprocess.h  remesh_dc.h  shape_decoder.h  sparse.h  ss_decoder.h  trellis_args.h  trellis_model.h  tri_bvh.h  uv_bake.h
install/: install.ps1  install.sh  portable-readme.txt
src/: birefnet.cpp  decimate_qem.comp  decimate_qem.cpp  decimate_qem.cu  decimate_qem_vk.cpp  decode_replay.cpp  deform_conv.comp  deform_conv.cu  deform_conv_cpu.cpp  deform_conv_stub.cpp  deform_conv_vk.cpp  dinov3.cpp  dit.cpp  dual_grid.cpp  flow_runner.cpp  mesh_glb.cpp  post_replay.cpp  preprocess.cpp  remesh_dc.cpp  shape_decoder.cpp  smoke_test.cpp  sparse.cpp  ss_decoder.cpp  test_bigop.cpp  test_birefnet.cpp  test_c2s.cpp  test_decimate.cpp  test_deform.cpp  test_dinov3.cpp  test_shape_dec.cpp  test_shape_flow.cpp  test_slat_shape.cpp  test_sparse_conv.cpp  test_ss_dec.cpp  test_ss_flow.cpp  test_ss_full.cpp  test_ss_sample.cpp  trellis-server.cpp  trellis_args.cpp  trellis_cli.cpp  (+5 more)
tools/: convert.py  glb_metrics.py  ref_birefnet.py  ref_c2s.py  ref_deform.py  ref_dinov3.py  ref_shape_dec.py  ref_slat_shape.py  ref_sparse_conv.py  ref_ss_dec.py  ref_ss_flow.py  ref_ss_full.py  ref_ss_sample.py  render_color.py  render_glb.py  render_glb_fast.py  render_mesh.py  render_points.py
tools/mv_preview/: README.md  index.html  render_quad.js  serve.py  stitch_quad.py  view.html
